#25 Panama math implemented
#25 switch math to Panama project
docs up